--- a/.github/workflows/update-whitelist.yml
+++ b/.github/workflows/update-whitelist.yml
@@ -2,7 +2,7 @@ name: Update Whitelist
 
 on:
   schedule:
-    - cron: "0 */4 * * *"  # every 4 hours
+    - cron: "*/5 * * * *"  # every 4 hours
   workflow_dispatch:       # allows manual run
 
 jobs:
