--- a/.github/workflows/update-whitelist.yml
+++ b/.github/workflows/update-whitelist.yml
@@ -3,17 +3,18 @@ name: Update Whitelist
 on:
   schedule:
     - cron: "*/5 * * * *"  # every 4 hours
-  workflow_dispatch:       # allows manual trigger from Actions tab
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write  # 👈 ensures the job can push
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          persist-credentials: false
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -28,11 +29,9 @@ jobs:
         run: python generate_list.py
 
       - name: Commit and push changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add docs/whitelist/whitelist.txt
           git diff --quiet && echo "No changes to commit" || git commit -m "Update whitelist [skip ci]"
           git push
